CDH-39637: still get time out issues in the sentry hive e2e tests, disabled duplicate e2e.dbprovider tests from post-commit job since e2e.hive tests are the same set of tests.
Change-Id: I3602010e5e4e1667dc0eeb0c350b8ed249ca71d5
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/12703
Tested-by: Jenkins User
Reviewed-by: Sijie Yu <anneyu@cloudera.com>
Tested-by: Sijie Yu <anneyu@cloudera.com>